--- a/vim.md.html
+++ b/vim.md.html
@@ -451,26 +451,29 @@ Command           | Description
 <meta name="keywords" content="*memo_vim.diff*">
 ## diff
 
-Command          | Description
------------------|---
-[c               | jump to the previous change
-]c               | jump to the next change
-[count]do        | :diffget
-[count]dp        | :diffput
-:diffupdate      | update
+Command           | Description
+----------------- | ---
+[c                | jump to the previous change
+]c                | jump to the next change
+[count]do         | :diffget
+[count]dp         | :diffput
+:diffupdate       | update
 
-<!--
 ## netrw
 
-Command          | Description
------------------|---
-i                | 表示形式変更
-< cr >           | ファイルを開く
-o                | ウィンドウを水平に分割してファイルを開く
-v                | ウィンドウを垂直に分割してファイルを開く
-P                | 前回のウィンドウでファイルを開く
-p                | プレビュー
--->
+Command           | Description
+----------------- | ---
+-                 | up dir
+CR                | ファイルを開く
+o                 | split  ウィンドウを水平に分割してファイルを開く
+v                 | vsplit ウィンドウを垂直に分割してファイルを開く
+t                 | tab
+P                 | previous window 前回のウィンドウでファイルを開く
+p                 | preview プレビュー
+i                 | 表示形式変更
+R                 | rename
+D                 | delete
+d                 | make dir
 
 <meta name="keywords" content="*memo_vim.term*">
 ## terminal
