--- a/sh.md.html
+++ b/sh.md.html
@@ -258,16 +258,19 @@ endsw
 
 <meta name="keywords" content="*memo_sh.commands*">
 <meta name="keywords" content="*memo_sh.cli*">
+<meta name="keywords" content="*memo_sh.cui*">
+<meta name="keywords" content="*memo_sh.tui*">
 Commands
 =======================================================
 ## New Commands
 Traditional | New          
 ---         | ---          
-ls          | exa          
+-           | fzf          
 cat         | bat (batcat) 
 find        | fd (fdfind)  
 grep        | rg (ripgrep) 
--           | fzf          
+ls          | exa          
+diff        | delta         
 du          | ncdu         
 top         | htop, btop   
 ps          |              
