--- a/sh.md.html
+++ b/sh.md.html
@@ -275,6 +275,49 @@ du          | ncdu
 top         | htop, btop   
 ps          |              
 
+<meta name="keywords" content="*memo_sh.lazygit*">
+## Lazygit
+### All
+Key | Description
+--- | ---
+q   | quit
+?   | help menu
+x   | help menu
+h   | prev pane
+l   | next pane
+j   | next line
+k   | prev line
+P   | push
+p   | pull
+[   | prev tab
+]   | next tab
+,   | prev page
+.   | next page
+J   | main panel scroll down
+K   | main panel scroll up
+
+### Status
+Key   | Description
+---   | ---
+a     | graph all
+enter | recent repos
+
+### Files
+Key   | Description
+---   | ---
+space | stage/unstage
+a     | stage/unstage all
+c     | commit
+
+### Local Branches
+Key   | Description
+---   | ---
+space | checkout
+R     | rename
+r     | rebase
+M     | merge
+f     | fetch
+
 <meta name="keywords" content="*memo_sh.zip*">
 <meta name="keywords" content="*memo_sh.unzip*">
 ## zip/unzip
