--- a/sh.md.html
+++ b/sh.md.html
@@ -263,17 +263,18 @@ endsw
 Commands
 =======================================================
 ## New Commands
-Traditional | New          
----         | ---          
--           | fzf          
-cat         | bat (batcat) 
-find        | fd (fdfind)  
-grep        | rg (ripgrep) 
-ls          | exa          
-diff        | delta         
-du          | ncdu         
-top         | htop, btop   
-ps          |              
+Traditional | New
+---         | ---
+-           | fzf
+cat         | bat (batcat)
+find        | fd (fdfind)
+grep        | rg (ripgrep)
+ls          | exa
+diff        | delta
+-           | lazygit
+du          | ncdu
+top         | htop, btop
+ps          |
 
 <meta name="keywords" content="*memo_sh.lazygit*">
 ## Lazygit
